# cinq

./: .gitignore  CHANGELOG.md  LICENSE  README.md  STATUS.md  test-2node.sh  test-local.sh
docs/: ARCHIVE_CINQ_CLOUD.md  ARCHIVE_TECHNICAL_PROPOSAL.md  DESIGN.md  TECHNICAL_PROPOSAL.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/apps/: mod.rs  registry.rs
src-tauri/src/grid/: bootstrap.rs  chat.rs  metrics.rs  mod.rs  node.rs  protocol.rs  proxy.rs  sbt.rs  stratum.rs  swarm.rs  transfer.rs  tunnel.rs  userid.rs
src-tauri/src/mcp/: mod.rs  protocol.rs  server.rs  tools.rs
src-tauri/src/qora/: agent.rs  git.rs  mod.rs  ollama.rs  tasks.rs
src-tauri/src/swarm/: costs.rs  intent.rs  mod.rs  qora.rs  tracker.rs
src-tauri/src/swarm/workers/: bandwidth.rs  mod.rs  payment.rs  storage.rs
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: apps.ts  canvas.ts  main.ts  styles.css  ui.ts  wallet.ts
