[package]
name = "cinq-connect"
version = "0.1.0"
description = "Cinq Connect - DePIN Grid for Quai Network"
authors = ["Cinq Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cinq_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["devtools"] }
tauri-plugin-log = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

# Cinq Grid - P2P networking
libp2p = { version = "0.54", features = [
    "tokio",
    "tcp",
    "dns",
    "mdns",
    "noise",
    "yamux",
    "request-response",
    "macros",
    "kad",           # Kademlia DHT for global peer discovery
    "identify",      # Protocol identification for peers
    "autonat",       # Automatic NAT detection
    "dcutr",         # Direct Connection Upgrade through Relay
    "relay",         # Relay protocol for NAT traversal
    "upnp",          # Universal Plug and Play for port mapping
] }
tokio = { version = "1", features = ["full", "sync", "fs", "signal"] }
futures = "0.3"
async-trait = "0.1"

# CLI argument parsing (for relay binary)
clap = { version = "4.5", features = ["derive"] }

# Logging
env_logger = "0.11"

# File handling and crypto
sha2 = "0.10"
uuid = { version = "1.0", features = ["v4"] }
dirs = "5.0"
rusqlite = { version = "0.31", features = ["bundled"] }

# SOCKS5 Proxy
fast-socks5 = "0.9"

# HTTP client for StratumX API
reqwest = { version = "0.11", features = ["json"] }

# ============================================================================
# Binaries
# ============================================================================

[[bin]]
name = "cinq-relay"
path = "src/bin/relay.rs"
